--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,9 +18,9 @@ status-website:
   cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
   logoUrl: https://files.pafgroup.org/103430917_p1.jpg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Ganyu Status Dashboard
+  introTitle: "This shows the running status of all Project And Factory services."
+  introMessage: Powerd by Upptime[**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
